@@ -8,3 +8,4 @@
 *.fct
 examples/1_Dipole/tmpData1.m
 examples/1_Dipole/tmpData.m
+*.asv
